Bug 186803 - JJ: Missing newline in folder tooltip
Summary: JJ: Missing newline in folder tooltip
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new folder tree (other bugs)
Version First Reported In: 1.11.90
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-10 18:12 UTC by Alessandro Guido
Modified: 2009-03-24 22:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
image that shows the tooltip (9.97 KB, image/png)
2009-03-10 18:13 UTC, Alessandro Guido
Details
Proposed patch (513 bytes, patch)
2009-03-20 16:42 UTC, Jaime Torres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Guido 2009-03-10 18:12:52 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Like subject says, folder tooltip in kmail miss a newline char before "Storage Size". See the attached image.
Comment 1 Alessandro Guido 2009-03-10 18:13:46 UTC
Created attachment 32005 [details]
image that shows the tooltip
Comment 2 Thomas McGuire 2009-03-18 23:54:54 UTC
Confirmed. Happens only for folders with qouta.
Comment 3 Jaime Torres 2009-03-20 16:42:52 UTC
Created attachment 32290 [details]
Proposed patch

May I commit it?
Comment 4 Thomas McGuire 2009-03-20 17:01:35 UTC
> May I commit it?

Yes, seems fine, thanks! But your patch is reversed for some reason.
Please commit. Afterwards, remove the entry from http://techbase.kde.org/Projects/PIM/KMail_Junior_Jobs.

BTW, great job you're doing on the bug triage, very much appreciated.

BTW, can you point people who attach patches to reviewboard.kde.org and to http://techbase.kde.org/Contribute/Send_Patches. For me, it is easy to miss patches on b.k.o if I don't watch closely.
Comment 5 Jaime Torres 2009-03-20 17:09:32 UTC
SVN commit 941878 by jtamate:

BUG: 186803

 M  +1 -1      folderview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=941878
Comment 6 Thomas McGuire 2009-03-24 22:56:31 UTC
SVN commit 944041 by tmcguire:

Backport r941878 by jtamate from trunk to the 4.2 branch:

CCBUG: 186803


 M  +1 -1      folderview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=944041