BUG: 186803

svn path=/trunk/KDE/kdepim/; revision=941878